force-app/main/default/objects/Account_Call__c/Account_Call__c.object-meta.xml
<CustomObject>
    <label>Account Call</label>
    <nameField>
        <label>Account Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>