force-app/main/default/objects/Account_Call__c/fields/Account_Call_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Call_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_Call_Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>