force-app/main/default/objects/Account_Call__c/fields/Account_Calls__c.field-meta.xml
<CustomField>
    <fullName>Account_Calls__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Academic Account, Business Account</value>
        </filterItems>
        <infoMessage>Only Business Accounts and Academic Accounts are shown in this screen.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Calls</relationshipLabel>
    <relationshipName>Account_Calls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>