force-app/main/default/objects/Account_Call__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account_Calls__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account#</label>
    <type>Text</type>
</CustomField>