force-app/main/default/objects/Account_Call__c/fields/Adhoc_Activities_CN__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Activities_CN__c</fullName>
    <label>Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dx Replenishment</fullName>
            </value>
            <value>
                <fullName>Rx Replenishment</fullName>
            </value>
            <value>
                <fullName>Staff Training</fullName>
            </value>
            <value>
                <fullName>Staff Training-Annual Supply</fullName>
            </value>
            <value>
                <fullName>Staff Training-Indus Knowledge</fullName>
            </value>
            <value>
                <fullName>Tech Follow-up</fullName>
            </value>
            <value>
                <fullName>Staff Training-Other</fullName>
            </value>
            <value>
                <fullName>Doctor Dinner</fullName>
            </value>
            <value>
                <fullName>Retail Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>