force-app/main/default/objects/Account_Call__c/fields/Call_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Call_Frequency__c</fullName>
    <label>Call Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>