force-app/main/default/objects/Account_Call__c/fields/Current_Quarter_Call__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarter_Call__c</fullName>
    <formula>IF(DATEVALUE(Start_Date__c) &lt;= Quarter_End_Date__c &amp;&amp; DATEVALUE(Start_Date__c)&gt;= Quarter_Start_Date__c, &#39;true&#39;, &#39;false&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Quarter Call</label>
    <type>Text</type>
</CustomField>