force-app/main/default/objects/Account_Call__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>