force-app/main/default/objects/Account_Call__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>Start_Date__c + 30/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDate</label>
    <type>DateTime</type>
</CustomField>