force-app/main/default/objects/Account_Call__c/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalId>true</externalId>
    <label>external_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>