force-app/main/default/objects/Account_Call__c/fields/iNTOUCH_CREATED__c.field-meta.xml
<CustomField>
    <fullName>iNTOUCH_CREATED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iNTOUCH CREATED</label>
    <type>Checkbox</type>
</CustomField>