force-app/main/default/objects/Account_Call__c/fields/Next_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Call__c</fullName>
    <formula>HYPERLINK(Next_Call_Name__c , &#39;/&#39;+ Next_Call_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Call</label>
    <type>Text</type>
</CustomField>