force-app/main/default/objects/Account_Call__c/fields/Next_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Id__c</fullName>
    <label>Next Call Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>