force-app/main/default/objects/Account_Call__c/fields/Next_Call_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Name__c</fullName>
    <label>Next Call Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>