force-app/main/default/objects/Account_Call__c/fields/Next_Call_Objective__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Objective__c</fullName>
    <label>Next Call Objective</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>