force-app/main/default/objects/Account_Call__c/fields/Next_Schedule_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Schedule_Call_Date__c</fullName>
    <label>Next Call Date</label>
    <type>DateTime</type>
</CustomField>