force-app/main/default/objects/Account_Call__c/fields/Next_Scheduled_Account_Call__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Account_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Scheduled Account Call</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Calls__c</field>
            <operation>equals</operation>
            <valueField>Account_Call__c.Account_Calls__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Call__c</referenceTo>
    <relationshipLabel>Account Calls</relationshipLabel>
    <relationshipName>Account_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>