force-app/main/default/objects/Account_Call__c/fields/P2__c.field-meta.xml
<CustomField>
    <fullName>P2__c</fullName>
    <label>P2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>