force-app/main/default/objects/Account_Call__c/fields/P3__c.field-meta.xml
<CustomField>
    <fullName>P3__c</fullName>
    <label>P3</label>
    <length>55</length>
    <type>Text</type>
</CustomField>