force-app/main/default/objects/Account_Call__c/fields/Quarter_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Start_Date__c</fullName>
    <label>Quarter Start Date</label>
    <type>Date</type>
</CustomField>