force-app/main/default/objects/Account_Call__c/fields/SAP_EXTRACT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>SAP_EXTRACT_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP EXTRACT FLAG</label>
    <type>Checkbox</type>
</CustomField>