force-app/main/default/objects/Account_Call__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Call Date</label>
    <type>DateTime</type>
</CustomField>