force-app/main/default/objects/Account_Call__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>Unscheduled</fullName>
            </value>
            <value>
                <fullName>Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>