force-app/main/default/objects/Account_Call__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed Inbound</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Completed Outbound</fullName>
            </value>
            <value>
                <fullName>Talked to Receptionist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>