force-app/main/default/objects/Account_Call__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory#</label>
    <length>225</length>
    <type>Text</type>
</CustomField>