force-app/main/default/objects/Account_Call__c/fields/Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner__c</fullName>
    <label>Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>