force-app/main/default/objects/Account_Call__c/fields/User_Role_In_Territory__c.field-meta.xml
<CustomField>
    <fullName>User_Role_In_Territory__c</fullName>
    <label>User Role In Territory</label>
    <length>225</length>
    <type>Text</type>
</CustomField>