force-app/main/default/objects/Account_Call__c/recordTypes/Account_Call_ISR.recordType-meta.xml
<RecordType>
    <fullName>Account_Call_ISR</fullName>
    <active>true</active>
    <description>Record Type to be used for all ISR Users</description>
    <label>Account Call ISR</label>
</RecordType>