force-app/main/default/objects/Account_Call__c/recordTypes/Account_Call_TBM.recordType-meta.xml
<RecordType>
    <fullName>Account_Call_TBM</fullName>
    <active>true</active>
    <description>Record Type to be used for all TBM Users</description>
    <label>Account Call TBM</label>
</RecordType>