force-app/main/default/objects/Account_Call__c/recordTypes/Call_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Call_Read_Only</fullName>
    <active>true</active>
    <description>Account Call Read Only Recordtype</description>
    <label>Call Read Only</label>
</RecordType>